--- a/views/home.html
+++ b/views/home.html
@@ -5,17 +5,77 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercado Liebre</title>
-    <link rel="stylesheet" href="/css/styles.css"
+    <link rel="stylesheet" href="/css/styles.css">
+
+
+
+    
+
+
+
 </head>
 <body>
 
   <header>
-      <img src = "/images/logo-mercado-liebre.svg" alt= "">
+
+    <br>
+      <img src = "/images/logo-mercado-liebre.svg" alt= ""
+      style="width: 400px;
+      height: 100px;">
+
+
       <div id="busqueda"></div>
 
-      <br>
+      
 
-<p>Comprá en cuotas y sin tarjeta de crédito</p>
+
+      <br>
+      <ul>
+<li>
+
+ 
+
+    
+
+ 
+  <div class="box"> 
+    <form action="#">
+        <input type="text"
+        
+            placeholder="Buscar productos, marcas"
+            
+            name="search"
+        
+            style="width: 400px;
+            ">
+        
+        </div>
+
+
+
+ 
+    
+    
+    <button>
+        
+        <i class="fa fa-search"
+            style="font-size: 18px;">
+        </i>
+    </button>
+</form>
+      
+          
+              
+
+
+     <p><a href=""><span class="fas fa-hand-holding-usd"></span> </a>   Comprá en cuotas y sin tarjeta de crédito</p>
+
+    
+
+
+
+    </li>
+</ul>
 
 <nav>
     <ul>
@@ -26,13 +86,74 @@
         <li><a href="">Ayuda</a></li>
     </ul>
 
+
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    rel="stylesheet" />
+ 
+
+
     <ul>
-        <li><a href="">Creá tu cuenta</a></li>
-        <li><a href="">Ingresá</a></li>
-        <li><a href="">Mis compras</a></li>
+       
+        <li><a href="">Creá tu cuenta</a>
+
+
+
+        <a href=""><i class="fas fa-id-card"></i></a>   
+
+    </li> 
+
+
+        <li><a href="">Ingresá</a>       
+        
+        
+        
+        <a href=""><i class="fas fa-sign-in-alt"></i></a>        
+      </li> 
+       
+        
+           
+
+     
+
+
+        <li><a href="">Mis compras</a>
+
+            <a href=""><i class="fas fa-shopping-basket"></i></a>    
+
+      
+
+    </li>
+
+
+<br>
+<br>
+<br>
+<br>
+
+    <div class="burger-menu">
+        <i class="fas fa-bars"></i>
+        </div>
+
+
+    
+
+
+    </nav>
     </ul>
 
+
+
+
     <img src = "/images/img-home-banner.jpg" alt= "">
+
+
+
+  
+
+
+
+
 
 </nav>
 
@@ -42,14 +163,18 @@
 
 
     <section>
-<H2>
-        <p><strong>BASADO EN TU ÚLTIMA VISITA </strong></p></H2>
 
-        
+        <p><H3>BASADO EN TU ÚLTIMA VISITA </H3></p>
+
+    
+            
 
         <img src = "/images/img-cafetera-moulinex.jpg" alt= "">
-    
-        <p>$6.770</p>
+
+
+
+        <div class="precio">
+        <p>$6.770</p></div>
             <p>40% OFF</p>
                 <p><strong>Cafetera Moulinex</strong></p>
 
@@ -57,20 +182,24 @@
 
                 <img src = "/images/img-macbook-pro-2019.jpg" alt= "">
 
-                <p>$230.000</p>
+                <div class="precio">
+                <P>$230.000</p> </div>
                     <p>20% OFF</p>
                         <p><strong>MacBook Pro 2019</strong></p>
 
 
                         <img src = "/images/img-samsung-galaxy-s10.jpg" alt= "">
 
-                        <p>$70.500</p>
+
+
+                        <div class="precio">
+                        <p>$70.500</p> </div>
                             <p>10% OFF</p>
                                 <p><strong>Samsung Galaxy S10</strong></p>
 
                                 <img src = "/images/img-tv-samsung-smart.jpg" alt= "">
-
-                                <p>$23.200</p>
+                                <div class="precio">
+                                <p>$23.200</p> </div>
                                     <p>5% OFF</p>
                                         <p><strong>SmartTv Samsung 43"</strong></p>
                         
@@ -80,34 +209,35 @@
     <section>
 <br>
 
-<H2>
-        <p><strong>SECCIÓN DE OFERTAS</strong></p></H2>
+
+        <p><H3>SECCIÓN DE OFERTAS</H3></p>
 
         
         <img src = "/images/img-cafetera-moulinex.jpg" alt= "">
-
-        <p>$6.770</p>
+        <div class="precioa">
+        <p>$6.770</p> </div>
             <p>40% OFF</p>
                 <p><strong>Cafetera Moulinex</strong></p>
 
 
                 <img src = "/images/img-macbook-pro-2019.jpg" alt= "">
 
-    
-                <p>$230.000</p>
+                <div class="precio">
+                <p>$230.000</p> </div>
                     <p>20% OFF</p>
-                        <p><strong>MacBook Pro 2019</strong></p>
+                        <p><H5>MacBook Pro 2019</H5></p>
 
                         <img src = "/images/img-samsung-galaxy-s10.jpg" alt= "">
 
-                        <p>$70.500</p>
+                        <div class="precio">
+                        <p>$70.500</p> </div>
                             <p>10% OFF</p>
                                 <p><strong>Samsung Galaxy S10</strong></p>
 
                                 <img src = "/images/img-tv-samsung-smart.jpg" alt= "">
 
-
-                                <p>$23.200</p>
+                                <div class="precio">
+                                <p>$23.200</p> </div>
                                     <p>5% OFF</p>
                                         <p><strong>SmartTv Samsung 43"</strong></p>
                         
@@ -122,7 +252,7 @@
 <BR>
     <BR>
     <section>
-<P><STRONG>PAGÁ CON TARJETA DE CRÉDITO O EN EFECTIVO</STRONG></P>
+<P><H3>PAGÁ CON TARJETA DE CRÉDITO O EN EFECTIVO</P></H3>
 <P>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
     puntos de pago. ¡Y siempre es seguro!</P>
     
@@ -131,7 +261,7 @@
     <BR>
         
 <section>
-    <P><STRONG> ENVÍO GRATIS DESDE $ 2.500    </STRONG></P>
+    <P><H3>ENVÍO GRATIS DESDE $ 2.500    </H3></P>
     <P>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
         productos. Es un beneficio de Mercado Puntos.</P>
         
@@ -140,9 +270,9 @@
         <BR>
           
         <section>
-            <P><STRONG>SEGURIDAD, DE PRINCIPIO A FIN
+            <P><H3>SEGURIDAD, DE PRINCIPIO A FIN
                
-                </STRONG></P>
+            </H3></P>
             <P> ¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                 porque estás siempre protegid@.</P>
                 
