--- a/views/home.html
+++ b/views/home.html
@@ -8,11 +8,6 @@
     <link rel="stylesheet" href="/css/styles.css">
 
 
-
-    
-
-
-
 </head>
 <body>
 
@@ -26,17 +21,9 @@
 
       <div id="busqueda"></div>
 
-      
-
-
       <br>
       <ul>
 <li>
-
- 
-
-    
-
  
   <div class="box"> 
     <form action="#">
@@ -51,11 +38,6 @@
         
         </div>
 
-
-
- 
-    
-    
     <button>
         
         <i class="fa fa-search"
@@ -64,14 +46,8 @@
     </button>
 </form>
       
-          
-              
-
 
      <p><a href=""><span class="fas fa-hand-holding-usd"></span> </a>   Comprá en cuotas y sin tarjeta de crédito</p>
-
-    
-
 
 
     </li>
@@ -111,17 +87,12 @@
         <a href=""><i class="fas fa-sign-in-alt"></i></a>        
       </li> 
        
-        
-           
-
-     
 
 
         <li><a href="">Mis compras</a>
 
             <a href=""><i class="fas fa-shopping-basket"></i></a>    
 
-      
 
     </li>
 
@@ -135,24 +106,11 @@
         <i class="fas fa-bars"></i>
         </div>
 
-
-    
-
-
     </nav>
     </ul>
 
 
-
-
     <img src = "/images/img-home-banner.jpg" alt= "">
-
-
-
-  
-
-
-
 
 
 </nav>
@@ -201,8 +159,7 @@
                                 <div class="precio">
                                 <p>$23.200</p> </div>
                                     <p>5% OFF</p>
-                                        <p><strong>SmartTv Samsung 43"</strong></p>
-                        
+                                        <p><strong>SmartTv Samsung 43"</strong></p>              
 
     </section>
 
@@ -239,8 +196,7 @@
                                 <div class="precio">
                                 <p>$23.200</p> </div>
                                     <p>5% OFF</p>
-                                        <p><strong>SmartTv Samsung 43"</strong></p>
-                        
+                                        <p><strong>SmartTv Samsung 43"</strong></p>               
 
     </section>
 
@@ -252,36 +208,59 @@
 <BR>
     <BR>
     <section>
-<P><H3>PAGÁ CON TARJETA DE CRÉDITO O EN EFECTIVO</P></H3>
-<P>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-    puntos de pago. ¡Y siempre es seguro!</P>
-    
+        <div class="tarjeta">
+        <i class="fas fa-credit-card"></i>
+</div>
+
+<div class="crédito">
+<P><H3>Pagá con tarjeta de crédito o en efectivo</P></H3>
+<P>Con Mercado Liebre Cash, tenés cuotas sin</P> interés con tarjeta o efectivo en
+    puntos de<P><P> pago. ¡Y siempre es seguro!</P>
+    </div>
 </section>
 <BR>
     <BR>
-        
+
+
+
+        <div class="regalo">
+        <i class="fas fa-gift"></i>
+
+       
+</div>
+
+
+        <div class="crédito">
 <section>
-    <P><H3>ENVÍO GRATIS DESDE $ 2.500    </H3></P>
-    <P>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-        productos. Es un beneficio de Mercado Puntos.</P>
-        
+    <P><H3>Envío gratis desde los $ 2.500    </H3></P>
+    <P>Solo por estar registrad@ en MercadoLiebre</P> <P>tenés envíos gratis en miles de
+        productos. Es </p> <p>un beneficio de MercadoPuntos.</P>
+    </div>
     </section>
     <BR>
         <BR>
-          
+
+            <div class="usuario">
+
+                <i class="fas fa-user-shield"></i>
+        
+            </div>
+
+
+            <div class="crédito">
         <section>
-            <P><H3>SEGURIDAD, DE PRINCIPIO A FIN
+            <P><H3>Seguridad de principio a fin
                
             </H3></P>
-            <P> ¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-                porque estás siempre protegid@.</P>
-                
+            <P> ¿No te gusta? ¡Devolvelo! En Mercado Liebre</P> <p>no hay nada que no puedas hacer
+                porque </p> <p>  estás siempre protegid@.</P>
+            </div>
             </section>
             <BR>
                 <BR>
                    
             <section>
-                <P>COPYRIGHT © 1999-2020 MERCADOLIEBRE S.R.L.</P>
+                <P>Copyright © 1999-2020 MercadoLiebre S.R.L.</P>
               
                     
                 </section>
