--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,4 @@
 
-
-
 header {
 
 background-color:  #EAC926;
@@ -8,10 +6,8 @@ background-color:  #EAC926;
 
 font-family: 'Roboto', sans-serif;
 
-
-
-
 }
+
 
 
 li {
@@ -20,19 +16,15 @@ color: black;
    
 }
 
+
+
 a{
 text-decoration: none}
-
-
-
-
 
 
 H3{
 
 font-size: 24PX;
-
-
 
 
 }
@@ -42,8 +34,7 @@ P{
 
     font-size: 12PX;
 
-   
-    
+  
     }
 
 
@@ -51,7 +42,6 @@ P{
 
         font-size: 16PX;
 
-        
 
     }
 
@@ -95,8 +85,11 @@ nav div{
     border-radius: 5px;
 }   
 
+.crédito{
+text-align: center;
+line-height: 1px;
 
-
+}
 
 
 nav ul li a{
@@ -121,5 +114,82 @@ ul li p span{
   
   }
 
-   
+        .tarjeta
+
+        {
+
+            top: 70%;
+            left: 500%;
+            transform: translate(650%, 5%);
+
+
+            font-size: 2em;
         
+            color: #0000CD;
+        
+        
+            width: 60px;
+        
+            height: 30px;
+        
+           
+        
+            border-radius: 5px;
+   
+            line-height: 1px
+
+        }
+
+
+        .usuario
+
+        {
+
+            top: 70%;
+            left: 500%;
+            transform: translate(650%, 5%);
+
+
+            font-size: 2em;
+        
+            color: #0000CD;
+        
+        
+            width: 60px;
+        
+            height: 30px;
+        
+           
+        
+            border-radius: 5px;
+   
+            line-height: 1px
+
+        }
+
+
+        .regalo
+
+        {
+
+            top: 70%;
+            left: 500%;
+            transform: translate(650%, 5%);
+
+
+            font-size: 2em;
+        
+            color: #0000CD;
+        
+        
+            width: 60px;
+        
+            height: 30px;
+        
+           
+        
+            border-radius: 5px;
+   
+            line-height: 1px
+
+        }
