--- a/views/home.html
+++ b/views/home.html
@@ -7,23 +7,23 @@
     <title>Mercado Liebre</title>
     <link rel="stylesheet" href="/css/styles.css">
 
+   
 
 </head>
 <body>
 
   <header>
-
-    <br>
+    <div class="logo">
+   
       <img src = "/images/logo-mercado-liebre.svg" alt= ""
-      style="width: 400px;
+      style="width: 200px;
       height: 100px;">
 
-
+</div>
       <div id="busqueda"></div>
 
-      <br>
-      <ul>
-<li>
+     
+     
  
   <div class="box"> 
     <form action="#">
@@ -33,35 +33,39 @@
             
             name="search"
         
-            style="width: 400px;
-            ">
+            style="width: 228px"
+            
+            padding-bottom: 50%>
         
         </div>
-
+    <div class="lupa">
     <button>
+
+
+        
         
         <i class="fa fa-search"
-            style="font-size: 18px;">
+            style="font-size: 18px;"
+            >
         </i>
     </button>
-</form>
+</form></div>
       
+    <div class="cuotas">
+     <a href=""><span class="fas fa-hand-holding-usd"></span> </a>   Comprá en cuotas y sin tarjeta de crédito
+    </div>
 
-     <p><a href=""><span class="fas fa-hand-holding-usd"></span> </a>   Comprá en cuotas y sin tarjeta de crédito</p>
-
-
-    </li>
-</ul>
+ 
 
 <nav>
-    <ul>
 
+<ul>
         <li><a href="">Ofertas</a></li>
         <li><a href="">Tiendas oficiales</a></li>
         <li><a href="">Vender</a></li>
         <li><a href="">Ayuda</a></li>
-    </ul>
 
+    </ul>
 
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -69,7 +73,7 @@
  
 
 
-    <ul>
+  <ul>
        
         <li><a href="">Creá tu cuenta</a>
 
@@ -95,22 +99,27 @@
 
 
     </li>
+</ul>
 
 
-<br>
-<br>
-<br>
-<br>
+
+
 
     <div class="burger-menu">
         <i class="fas fa-bars"></i>
-        </div>
+       </div>
 
     </nav>
-    </ul>
+  
 
 
-    <img src = "/images/img-home-banner.jpg" alt= "">
+    <img src = "/images/img-home-banner.jpg" alt= ""
+
+
+    style="width: 410px;
+       padding-bottom: 5%;
+       padding-top: 20%;
+    height: 70px;">
 
 
 </nav>
@@ -122,14 +131,16 @@
 
     <section>
 
-        <p><H3>BASADO EN TU ÚLTIMA VISITA </H3></p>
+        <h3>BASADO EN TU ÚLTIMA VISITA</h3>
 
-    
+<article>
             
-
-        <img src = "/images/img-cafetera-moulinex.jpg" alt= "">
-
-
+        <center>
+        <img src = "/images/img-cafetera-moulinex.jpg" alt= ""
+        style="width: 250px;
+       
+        height: 250px;">
+        </center>
 
         <div class="precio">
         <p>$6.770</p></div>
@@ -137,67 +148,141 @@
                 <p><strong>Cafetera Moulinex</strong></p>
 
 
+</article>
 
-                <img src = "/images/img-macbook-pro-2019.jpg" alt= "">
+<article>
+                <center>
+
+                <img src = "/images/img-macbook-pro-2019.jpg" alt= ""
+                style="width: 250px;
+       
+                height: 250px;">
+
+
+            </center>
+        
 
                 <div class="precio">
                 <P>$230.000</p> </div>
                     <p>20% OFF</p>
                         <p><strong>MacBook Pro 2019</strong></p>
+</article>
 
+<article>
+                        <center>
+                        <img src = "/images/img-samsung-galaxy-s10.jpg" alt= ""
 
-                        <img src = "/images/img-samsung-galaxy-s10.jpg" alt= "">
+                        style="width: 250px;
+       
+                        height: 250px;">
 
+                </center>
 
 
                         <div class="precio">
                         <p>$70.500</p> </div>
                             <p>10% OFF</p>
                                 <p><strong>Samsung Galaxy S10</strong></p>
+                           
+ </article>
+<article>
+                                <center>
+                                <img src = "/images/img-tv-samsung-smart.jpg" alt= ""
+                                style="width: 250px;
+       
+                                height: 250px;">
 
-                                <img src = "/images/img-tv-samsung-smart.jpg" alt= "">
+                            </center>
                                 <div class="precio">
                                 <p>$23.200</p> </div>
                                     <p>5% OFF</p>
                                         <p><strong>SmartTv Samsung 43"</strong></p>              
 
+
+     </article>
+
+
+
     </section>
 
     <section>
-<br>
 
 
-        <p><H3>SECCIÓN DE OFERTAS</H3></p>
 
-        
-        <img src = "/images/img-cafetera-moulinex.jpg" alt= "">
-        <div class="precioa">
+        <H3>SECCIÓN DE OFERTAS</H3>
+
+
+
+<article>
+
+        <center>
+        <img src = "/images/img-cafetera-moulinex.jpg" alt= ""
+    
+
+        style="width: 250px;
+       
+        height: 250px;">
+
+
+        </center>
+
+        <div class="precios">
         <p>$6.770</p> </div>
             <p>40% OFF</p>
                 <p><strong>Cafetera Moulinex</strong></p>
+</article>
 
 
-                <img src = "/images/img-macbook-pro-2019.jpg" alt= "">
+<article>
+            <center>
+                <img src = "/images/img-macbook-pro-2019.jpg" alt= ""
+                style="width: 250px;
+       
+                height: 250px;">
 
+            </center>
                 <div class="precio">
                 <p>$230.000</p> </div>
                     <p>20% OFF</p>
                         <p><H5>MacBook Pro 2019</H5></p>
 
-                        <img src = "/images/img-samsung-galaxy-s10.jpg" alt= "">
+                    </article>
+                <article>
+                        
+            <center>
+                        <img src = "/images/img-samsung-galaxy-s10.jpg" alt= ""
 
+                        style="width: 250px;
+       
+                        height: 250px;">
+                        
+            </center>
                         <div class="precio">
                         <p>$70.500</p> </div>
                             <p>10% OFF</p>
                                 <p><strong>Samsung Galaxy S10</strong></p>
 
-                                <img src = "/images/img-tv-samsung-smart.jpg" alt= "">
 
+                            <article>
+
+
+                            <center>
+
+
+                                <img src = "/images/img-tv-samsung-smart.jpg" alt= ""
+                                style="width: 250px;
+       
+                                height: 250px;">
+
+                            </center>
                                 <div class="precio">
                                 <p>$23.200</p> </div>
                                     <p>5% OFF</p>
                                         <p><strong>SmartTv Samsung 43"</strong></p>               
 
+
+
+                                    </article>
     </section>
 
 </main>
@@ -205,24 +290,25 @@
 
 <footer>
 
-<BR>
-    <BR>
+
     <section>
+
+
+        <article>
         <div class="tarjeta">
         <i class="fas fa-credit-card"></i>
 </div>
 
 <div class="crédito">
-<P><H3>Pagá con tarjeta de crédito o en efectivo</P></H3>
+<H3>Pagá con tarjeta de crédito o en efectivo</H3>
 <P>Con Mercado Liebre Cash, tenés cuotas sin</P> interés con tarjeta o efectivo en
     puntos de<P><P> pago. ¡Y siempre es seguro!</P>
     </div>
-</section>
-<BR>
-    <BR>
 
 
+</article>
 
+<article>
         <div class="regalo">
         <i class="fas fa-gift"></i>
 
@@ -232,13 +318,13 @@
 
         <div class="crédito">
 <section>
-    <P><H3>Envío gratis desde los $ 2.500    </H3></P>
+    <H3>Envío gratis desde los $ 2.500    </H3>
     <P>Solo por estar registrad@ en MercadoLiebre</P> <P>tenés envíos gratis en miles de
         productos. Es </p> <p>un beneficio de MercadoPuntos.</P>
     </div>
-    </section>
-    <BR>
-        <BR>
+   
+</article>
+<article>
 
             <div class="usuario">
 
@@ -248,18 +334,15 @@
 
 
             <div class="crédito">
-        <section>
-            <P><H3>Seguridad de principio a fin
-               
-            </H3></P>
+      
+            <H3>Seguridad de principio a fin</H3>
             <P> ¿No te gusta? ¡Devolvelo! En Mercado Liebre</P> <p>no hay nada que no puedas hacer
                 porque </p> <p>  estás siempre protegid@.</P>
             </div>
-            </section>
-            <BR>
-                <BR>
-                   
-            <section>
+        
+            
+        </article>        
+    
                 <P>Copyright © 1999-2020 MercadoLiebre S.R.L.</P>
               
                     
