--- a/views/home.html
+++ b/views/home.html
@@ -22,8 +22,6 @@
 </div>
       <div id="busqueda"></div>
 
-     
-     
  
   <div class="box"> 
     <form action="#">
@@ -41,9 +39,7 @@
     <div class="lupa">
     <button>
 
-
-        
-        
+   
         <i class="fa fa-search"
             style="font-size: 18px;"
             >
@@ -55,7 +51,6 @@
      <a href=""><span class="fas fa-hand-holding-usd"></span> </a>   Comprá en cuotas y sin tarjeta de crédito
     </div>
 
- 
 
 <nav>
 
@@ -71,7 +66,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     rel="stylesheet" />
  
-
 
   <ul>
        
@@ -101,23 +95,19 @@
     </li>
 </ul>
 
-
-
-
-
     <div class="burger-menu">
+     
         <i class="fas fa-bars"></i>
        </div>
 
     </nav>
   
 
-
     <img src = "/images/img-home-banner.jpg" alt= ""
 
 
-    style="width: 410px;
-       padding-bottom: 5%;
+    style="width: 426px;
+       padding-bottom: 1%;
        padding-top: 20%;
     height: 70px;">
 
@@ -128,8 +118,7 @@
 
 <main>
 
-
-    <section>
+<section>
 
         <h3>BASADO EN TU ÚLTIMA VISITA</h3>
 
@@ -244,7 +233,7 @@
                 <div class="precio">
                 <p>$230.000</p> </div>
                     <p>20% OFF</p>
-                        <p><H5>MacBook Pro 2019</H5></p>
+                        <p><strong>MacBook Pro 2019</strong></p>
 
                     </article>
                 <article>
@@ -263,7 +252,7 @@
                                 <p><strong>Samsung Galaxy S10</strong></p>
 
 
-                            <article>
+<article>
 
 
                             <center>
@@ -282,7 +271,7 @@
 
 
 
-                                    </article>
+    </article>
     </section>
 
 </main>
@@ -318,7 +307,7 @@
 
         <div class="crédito">
 <section>
-    <H3>Envío gratis desde los $ 2.500    </H3>
+    <H3>Envío gratis desde los $ 2.500</H3>
     <P>Solo por estar registrad@ en MercadoLiebre</P> <P>tenés envíos gratis en miles de
         productos. Es </p> <p>un beneficio de MercadoPuntos.</P>
     </div>
@@ -341,12 +330,12 @@
             </div>
         
             
-        </article>        
+</article>        
     
                 <P>Copyright © 1999-2020 MercadoLiebre S.R.L.</P>
               
                     
-                </section>
+</section>
 </footer>
 
 </body>
