--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,10 +1,25 @@
 
+:root {
+   --color-icono: #0000CD;
+
+   --alineacion-texto: center;
+
+   --tipografia: 'Roboto', sans-serif;
+}
+
+
+
+body {
+    margin:0;
+}
+
+
 header {
 
 background-color:  #EAC926;
 
 
-font-family: 'Roboto', sans-serif;
+font-family: var(--tipografia);
 
 }
 
@@ -65,7 +80,7 @@ P{
 
 ul li p  {
 
-    text-align: center;
+    text-align: var(--alineacion-texto);
 
 
     font-size: 18PX;
@@ -76,28 +91,34 @@ ul li p  {
 
 nav div{
     
-    text-align: center;
-
-    font-size: 37px;
+    text-align:var(--alineacion-texto);
+ 
+    font-size: 35px;
+ 
+   
 
     color: white;
 
     background:  #0000CD;
 
-    width: 60px;
+    width: 45px;
 
-    height: 50px;
+    height: 45px;
 
     position: absolute;
-    top: 55%;
+    top: 58%;
     left: 50%;
     transform: translate(-50%, -50%);
 
     border-radius: 5px;
+   
 }   
 
+
+
+
 .crédito{
-text-align: center;
+text-align: var(--alineacion-texto);
 line-height: 1px;
 margin-bottom: 50px;
 
@@ -157,7 +178,7 @@ ul li p span{
 
             font-size: 2em;
         
-            color: #0000CD;
+            color: var(--color-icono);
         
         
             width: 60px;
@@ -184,7 +205,7 @@ ul li p span{
 
             font-size: 2em;
         
-            color: #0000CD;
+            color: var(--color-icono);
         
         
             width: 60px;
@@ -214,7 +235,7 @@ ul li p span{
 
             font-size: 2em;
         
-            color: #0000CD;
+            color: var(--color-icono);
         
         
             width: 60px;
@@ -232,10 +253,11 @@ ul li p span{
         .cuotas{
 
             font-size: 15px;
-            text-align: center;
+            text-align: var(--alineacion-texto);;
            padding: 10%;
-           margin-bottom: -10%;
-         
+           margin-bottom: -8%;
+           margin-top: 30px;
+       
         
         }
 
