--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -268,4 +268,6 @@ ul li p span{
           
         }
 
-       
+        @media(min-device-width: 320px) and (max-device-width: 480px){
+            
+        }
