--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -268,7 +268,20 @@ ul li p span{
           
         }
 
-        @media(min-device-width: 320px) and (max-device-width: 480px){
-            
 
+        .articulos-centrados {
+
+
+            
         }
+
+
+
+
+
+
+
+        @media(min-device-width: 320px) and (max-device-width: 480px){}
+
+
+        
