--- a/views/home.html
+++ b/views/home.html
@@ -124,6 +124,8 @@
 
 <article>
             
+
+    <div class= "articulos-centrados">
         <center>
         <img src = "/images/img-cafetera-moulinex.jpg" alt= ""
         style="width: 250px;
