--- a/views/home.html
+++ b/views/home.html
@@ -118,26 +118,65 @@
 
 <main>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
+
+
+
+
+
+
+    
+<div class= "estructura-main">
+
+
+
 <section>
 
         <h3>BASADO EN TU ÚLTIMA VISITA</h3>
 
+
+
+
 <article>
             
 
-    <div class= "articulos-centrados">
-        <center>
+    <center>
+        
         <img src = "/images/img-cafetera-moulinex.jpg" alt= ""
         style="width: 250px;
        
-        height: 250px;">
-        </center>
+        height: 250px;
+          margin-bottom: 10px;"
+        >
+
+     </center>
 
         <div class="precio">
         <p>$6.770</p></div>
             <p>40% OFF</p>
                 <p><strong>Cafetera Moulinex</strong></p>
-
+                
 
 </article>
 
@@ -147,8 +186,8 @@
                 <img src = "/images/img-macbook-pro-2019.jpg" alt= ""
                 style="width: 250px;
        
-                height: 250px;">
-
+                height: 250px;
+                margin-bottom: 10px;">
 
             </center>
         
@@ -160,14 +199,14 @@
 </article>
 
 <article>
-                        <center>
+    <center>
                         <img src = "/images/img-samsung-galaxy-s10.jpg" alt= ""
 
                         style="width: 250px;
        
-                        height: 250px;">
-
-                </center>
+                        height: 250px; 
+                        margin-bottom: 10px;">
+    </center>
 
 
                         <div class="precio">
@@ -181,7 +220,8 @@
                                 <img src = "/images/img-tv-samsung-smart.jpg" alt= ""
                                 style="width: 250px;
        
-                                height: 250px;">
+                                height: 250px;
+                                margin-bottom: 10px;">
 
                             </center>
                                 <div class="precio">
@@ -212,8 +252,8 @@
 
         style="width: 250px;
        
-        height: 250px;">
-
+        height: 250px;
+margin-bottom: 10px;">
 
         </center>
 
@@ -229,7 +269,8 @@
                 <img src = "/images/img-macbook-pro-2019.jpg" alt= ""
                 style="width: 250px;
        
-                height: 250px;">
+                height: 250px;
+                margin-bottom: 10px;">
 
             </center>
                 <div class="precio">
@@ -245,7 +286,8 @@
 
                         style="width: 250px;
        
-                        height: 250px;">
+                        height: 250px;
+                        margin-bottom: 10px;">
                         
             </center>
                         <div class="precio">
@@ -263,7 +305,8 @@
                                 <img src = "/images/img-tv-samsung-smart.jpg" alt= ""
                                 style="width: 250px;
        
-                                height: 250px;">
+                                height: 250px;
+                                margin-bottom: 10px;">
 
                             </center>
                                 <div class="precio">
@@ -277,6 +320,38 @@
     </section>
 
 </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <footer>
