--- a/views/home.html
+++ b/views/home.html
@@ -167,18 +167,27 @@
         style="width: 250px;
        
         height: 250px;
-          margin-bottom: 10px;"
-        >
+          margin-bottom: 10px;" >
 
      </center>
 
+<div class= "estructura"></div>
+
+     <div class= "circulo"> <div class= "camión">
+        <i class="fas fa-truck"></i>
+    </div></div>
+
+
         <div class="precio">
+           
         <p>$6.770</p></div>
             <p>40% OFF</p>
-                <p><strong>Cafetera Moulinex</strong></p>
+            <h4>Cafetera Moulinex</h4>
                 
-
+     
 </article>
+
+
 
 <article>
                 <center>
@@ -190,12 +199,16 @@
                 margin-bottom: 10px;">
 
             </center>
-        
-
+            <div class= "estructura"></div>
+            <div class= "circulo"> <div class= "camión">
+                <i class="fas fa-truck"></i>
+            </div></div>
                 <div class="precio">
-                <P>$230.000</p> </div>
+                   
+                <p>$230.000</p> </div>
                     <p>20% OFF</p>
-                        <p><strong>MacBook Pro 2019</strong></p>
+                    <h4>MacBook Pro 2019</h4>
+                
 </article>
 
 <article>
@@ -207,13 +220,16 @@
                         height: 250px; 
                         margin-bottom: 10px;">
     </center>
-
-
+    <div class= "estructura"></div>
+    <div class= "circulo"> <div class= "camión">
+        <i class="fas fa-truck"></i>
+    </div></div>
                         <div class="precio">
+                         
                         <p>$70.500</p> </div>
                             <p>10% OFF</p>
-                                <p><strong>Samsung Galaxy S10</strong></p>
-                           
+                               <h4>Samsung Galaxy S10</h4>
+                       
  </article>
 <article>
                                 <center>
@@ -224,11 +240,16 @@
                                 margin-bottom: 10px;">
 
                             </center>
+                            <div class= "estructura"></div>
+                            <div class= "circulo"> <div class= "camión">
+                                <i class="fas fa-truck"></i>
+                            </div></div>
                                 <div class="precio">
+                                   
                                 <p>$23.200</p> </div>
                                     <p>5% OFF</p>
-                                        <p><strong>SmartTv Samsung 43"</strong></p>              
-
+                                    <h4>SmartTv Samsung 43"</h4>           
+                                </div>
 
      </article>
 
@@ -239,12 +260,15 @@
     <section>
 
 
-
+        <div class= "estructura-main">
         <H3>SECCIÓN DE OFERTAS</H3>
 
 
 
 <article>
+
+
+
 
         <center>
         <img src = "/images/img-cafetera-moulinex.jpg" alt= ""
@@ -257,10 +281,18 @@ margin-bottom: 10px;">
 
         </center>
 
-        <div class="precios">
+        <div class= "estructura"></div>
+
+        <div class= "circulo"> <div class= "camión">
+            <i class="fas fa-truck"></i>
+        </div></div>
+
+        
+        <div class="precio">
+      
         <p>$6.770</p> </div>
             <p>40% OFF</p>
-                <p><strong>Cafetera Moulinex</strong></p>
+            <h4>Cafetera Moulinex/<h4>
 </article>
 
 
@@ -273,10 +305,15 @@ margin-bottom: 10px;">
                 margin-bottom: 10px;">
 
             </center>
+            <div class= "estructura"></div>
+            <div class= "circulo"> <div class= "camión">
+                <i class="fas fa-truck"></i>
+            </div></div>
                 <div class="precio">
+                  
                 <p>$230.000</p> </div>
                     <p>20% OFF</p>
-                        <p><strong>MacBook Pro 2019</strong></p>
+                    <h4>MacBook Pro 2019</h4>
 
                     </article>
                 <article>
@@ -290,10 +327,16 @@ margin-bottom: 10px;">
                         margin-bottom: 10px;">
                         
             </center>
+            <div class= "estructura"></div>
+
+            <div class= "circulo"> <div class= "camión">
+                <i class="fas fa-truck"></i>
+            </div></div>
                         <div class="precio">
+                      
                         <p>$70.500</p> </div>
                             <p>10% OFF</p>
-                                <p><strong>Samsung Galaxy S10</strong></p>
+                            <h4>Samsung Galaxy S10</h4>
 
 
 <article>
@@ -309,10 +352,16 @@ margin-bottom: 10px;">
                                 margin-bottom: 10px;">
 
                             </center>
+                            <div class= "estructura"></div>
+
+                            <div class= "circulo"> <div class= "camión">
+                                <i class="fas fa-truck"></i>
+                            </div></div>
                                 <div class="precio">
+                                   
                                 <p>$23.200</p> </div>
                                     <p>5% OFF</p>
-                                        <p><strong>SmartTv Samsung 43"</strong></p>               
+                                    <h4>SmartTv Samsung 43"</h4>            
 
 
 
